--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "bmc_portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://bmc1995.github.io/bmc_portfolio",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -19,6 +18,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
